// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse state from flow on "action_flow_update" with active method = code 1`] = `
{
  "current": "method_active",
  "method": "code",
}
`;

exports[`should parse state from flow on "action_flow_update" with active method = code_recovery 1`] = `
{
  "current": "method_active",
  "method": "code",
}
`;

exports[`should parse state from flow on "action_flow_update" with active method = link_recovery 1`] = `
{
  "current": "method_active",
  "method": "link",
}
`;
